{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 12,
  "lineage": "cdf51b55-444b-9869-5e28-16c3c2f76c7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446611234961:internet-gateway/igw-00ae3aa1f87028b8f",
            "id": "igw-00ae3aa1f87028b8f",
            "owner_id": "446611234961",
            "vpc_id": "vpc-039bc6d80c605dddb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07462b4319231476d",
            "original_route_table_id": "rtb-0533d8d39580c4619",
            "route_table_id": "rtb-0711cb1d8f403346b",
            "vpc_id": "vpc-039bc6d80c605dddb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446611234961:route-table/rtb-0711cb1d8f403346b",
            "id": "rtb-0711cb1d8f403346b",
            "owner_id": "446611234961",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ae3aa1f87028b8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039bc6d80c605dddb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446611234961:security-group/sg-0db6a0cf6939a73a4",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db6a0cf6939a73a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "168.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_access",
            "name_prefix": "",
            "owner_id": "446611234961",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "emr_test"
            },
            "tags_all": {
              "name": "emr_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a0c73439e0e1ca8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446611234961:subnet/subnet-0d9f7397351910799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "168.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f7397351910799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446611234961",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "emr_test"
            },
            "tags_all": {
              "name": "emr_test"
            },
            "vpc_id": "vpc-039bc6d80c605dddb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446611234961:vpc/vpc-039bc6d80c605dddb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "168.31.0.0/16",
            "default_network_acl_id": "acl-06aed72091fc8169d",
            "default_route_table_id": "rtb-0533d8d39580c4619",
            "default_security_group_id": "sg-0f0bbbfac20177899",
            "dhcp_options_id": "dopt-07c8d73adc35789c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039bc6d80c605dddb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0533d8d39580c4619",
            "owner_id": "446611234961",
            "tags": {
              "name": "emr_test"
            },
            "tags_all": {
              "name": "emr_test"
            }
          }
        }
      ]
    }
  ]
}